--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,10 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "recca0120/laravel-tracy": "^1.16",
+       "barryvdh/laravel-ide-helper": "^2.2",
+       "doctrine/dbal": "^2.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
